# go-mavlink

./: Dockerfile  Makefile
examples/udprx/: BUILD.bazel  main.go
mavgen/: BUILD.bazel  mavgen.go
mavlink/: BUILD.bazel  ardupilotmega.go  common.go  message.go
mavlink/definitions/: ardupilotmega.xml  common.xml
x25/: BUILD.bazel
