load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "main.go",
        "mavgen.go",
    ],
    importpath = "github.com/tritonuas/god/go-mavlink/mavgen",
    visibility = ["//visibility:private"],
    deps = ["//go-mavlink/x25:go_default_library"],
)

go_binary(
    name = "mavgen",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "go_default_test",
    srcs = ["mavgen_test.go"],
    embed = [":go_default_library"],
)
